--- a/app/index/view/index/find.html
+++ b/app/index/view/index/find.html
@@ -27,7 +27,7 @@
 <script>
     layui.use(['form', 'layim'], function () {
         ws.init({
-            url: "ws.an0nymou5.com/ws/im",
+            url: "{:config('app.websocket_url')}",
             token: window.encodeURIComponent(common.getCookie('token'))
         }).connect();
 
