--- a/app/index/view/index/message_box.html
+++ b/app/index/view/index/message_box.html
@@ -122,7 +122,7 @@
         var cache = {}; //用于临时记录请求到的数据
 
         ws.init({
-            url: "ws.an0nymou5.com/ws/im",
+            url: "{:config('app.websocket_url')}",
             token: window.encodeURIComponent(common.getCookie('token'))
         }).connect();
         ws.onmessage = function (message) {
