--- a/app/index/view/index/index.html
+++ b/app/index/view/index/index.html
@@ -372,6 +372,17 @@
                 }
             });
         });
+
+        $(document).on('click', '.layui-layim-avatar img', function () {
+            layer.open({
+                type: 2,
+                area: ['1000px', '620px'],
+                title: '上传头像',
+                closeBtn: 2,
+                content: "{:url('index/index/uploadAvatar')}"
+            })
+        })
+
     });
 
 </script>
