--- a/app/index/view/index/upload_avatar.html
+++ b/app/index/view/index/upload_avatar.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="/static/css/cropper.min.css">
-    <link rel="stylesheet" href="/static/css/ImgCropping.css">
+    <link rel="stylesheet" href="/static/css/imgCropping.css">
 
     <style>
         .str {
